--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,8 +10,7 @@
   </head>
   <body class="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <button title="navbar-toggler"
-        class="navbar-toggler"
+      <button title="navbar-toggler" class="navbar-toggler"
         type="button"
         data-toggle="collapse"
         data-target="#navbar"
