basic_functions_everything works

--- a/website/templates/admin/admin.html
+++ b/website/templates/admin/admin.html
@@ -31,13 +31,13 @@
       <div class="position-sticky pt-3">
           <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link" href="/new-event">
+            <a class="nav-link" href="/admin/new-event">
               <span data-feather="file"></span>
               Akce/Závody
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/registrations">
+            <a class="nav-link" href="/admin/registrations">
               <span data-feather="shopping-cart"></span>
               Registrace a výstupy
             </a>
