--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -10,9 +10,7 @@
   </head>
   <body class="body">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <button title="navbar-toggler" class="navbar-toggler" type="button" data-toggle="collapse"
-        data-target="#navbar"
-        >
+      <button title="navbar-toggler" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
@@ -29,7 +27,9 @@
         </div>
       </div>
     </nav>
-
+    <br>
+    <br>
+    <br>
     {% with messages = get_flashed_messages(with_categories=true) %} 
     {% if messages %} 
     {% for category, message in messages %} 
@@ -48,8 +48,7 @@
       </button>
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
-    <br>
-    <br>
+    
     <div class="container">{% block content %} {% endblock %}</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
