--- a/website/templates/public/registration.html
+++ b/website/templates/public/registration.html
@@ -1,50 +1,25 @@
 {% extends 'base.html' %}
-
 {% block content %}
 
-{% with messages = get_flashed_messages(with_categories=true) %} 
-{% if messages %} 
-{% for category, message in messages %} 
-{% if category =='error' %}
-<div class="alert alert-danger alter-dismissable fade show" role="alert">
-  {{ message }}
-  <button type="button" class="close" data-dismiss="alert">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-{% else %}
-<div class="alert alert-success alter-dismissable fade show" role="alert">
-  {{ message }}
-  <button type="button" class="close" data-dismiss="alert">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-{% endif %} {% endfor %} {% endif %} {% endwith %}
-
-
-
 <div class="container mt-5 text-center">
-    <h1 id="event_title" class="mb-4"></h1>
-    <button id="propositions_download" onclick="">Propozice</button>
-    <button id="results_download" onclick="">Výsledky</button>
-
+    <h1 id="event_title" class="mb-4">{{ event_details.name}}</h1>
+    <button id="propositions_download" onclick="downloadFile('{{ event_details.propositions_name}}')">Propozice {{ event_details.propositions_name}}</button>
+    <button id="results_download" onclick="downloadFile('{{ event_details.results_name}}')">Výsledky {{ event_details.results_name}}</button>
 </div>
+
 <div class="container">
     <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
+                {% if event_details.opened %}
                 <input type="text" id="searchInput" class="form-control mb-3" placeholder="Hledej příjmení">
                 <select name="racers" id="racers" size="7" class="form-select mb-3">
                     {% for racer in racer_list %}
                         <option value="{{ racer.firstName }}!{{ racer.lastName }}!{{ racer.birthYear }}!{{ racer.teamName }}!{{ racer.gender }}">{{ racer.firstName }} {{ racer.lastName }} {{ racer.birthYear }}</option>
                     {% endfor %}
                 </select>
-                <form action='/registration' method="post">
+                <form action="{{ url_for('views.register', event_id=event_details['id']) }}" method="post">
                     <div class="row">
-                        <div class="col-12">
-                            <label for="event_name" class="form-label invisible">Závod</label>
-                            <input type="text" id="event_name" name="event_name" class="form-control mb-3 invisible" readonly>
-                        </div>
                         <div class="col-md-4">
                             <label for="racer_firstName" class="form-label">Jméno</label>
                             <input type="text" id="racer_firstName" name="racer_firstName" class="form-control mb-3" required>
@@ -89,6 +64,9 @@
                         <input type="submit" value="Submit" class="btn btn-primary">
                     </div>
                 </form>
+                {% else %}
+                <h1 class="display-1">Registrace zavřené</h1>
+                {% endif %}
             </div>
         
     </div>
