--- a/website/templates/public/index.html
+++ b/website/templates/public/index.html
@@ -18,14 +18,23 @@
     <br>
     <h2></h2>
     <div class="row row-cols-1 g-4" id="notes">
-        {% for note in notes %}
-            <div class="col">
-                <div class="card custom-opacity shadow">
-                    <div class="card-body">
-                        <p class="card-text">{{ note.data }}</p>
-                    </div> 
+        {% for post in blog_posts %}
+        <div class="card mb-3 bg-info bg-gradient">
+            <div class="row g-0">
+              
+                <div class="card-body">
+                  <h5 class="card-title">{{ post.note_title }}</h5>
+                  <p class="card-text">{{ post.note_data }}</p>
+                  <p class="card-text"><small class="text-body-secondary">{{ post.note_date }}</small></p>
                 </div>
+              
+              {% if post.note_image %}
+              <div class="col-md-4">
+                <img src="{{ post.image_url }}" class="img-fluid rounded-start" alt="{{ post.image_url }}">
+              </div>
+              {% endif%}
             </div>
+          </div>
         {% endfor %}
     </div>
     <br>
@@ -58,7 +67,6 @@
             {% endfor %}
         </div>
     </div>
-    
     <hr>
 </div>
 
